Fixed spacing in nav

--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,7 @@ header .headtext {
 
 nav a {
     display: inline;
-    padding: 35px 1.25% 17px;
+    padding: 35px 0.5% 17px;
     font-size: 24px;
     color: #fff;
     text-decoration: none !important;
